--- a/_config.ayer.yml
+++ b/_config.ayer.yml
@@ -95,6 +95,7 @@ copyright_type: 2
 # 是否启用搜索
 # 需要安装hexo-generator-searchdb(https://github.com/theme-next/hexo-generator-searchdb)
 search: true
+path: /search.xml
 
 # RSS订阅(先安装hexo-generator-feed插件，再去博客根目录config进行配置)
 # 不想显示可以直接留空
