--- a/_config.yml
+++ b/_config.yml
@@ -105,3 +105,9 @@ theme: ayer
 deploy:
   type: git
   repo: git@github.com:PocketBrother/PocketBrother.github.io.git
+
+# hexo-generator-searchdb
+search:
+  path: search.xml
+  field: post
+  format: html
