--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 口袋哥哥的学习播客
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: 口袋哥哥
 language: en
 timezone: ''
 
