--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://github.com/PocketBrother/PocketBrother.github.io.git
+url: https://github.com/PocketBrother/blog
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -104,7 +104,7 @@ theme: ayer
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:PocketBrother/PocketBrother.github.io.git
+  repo: git@github.com:PocketBrother/blog
 
 # hexo-generator-searchdb
 search:
