--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "5.4.1"
   },
   "dependencies": {
-    "hexo": "^5.0.0",
+    "deployer": "0.0.6",
+    "hexo": "^5.4.1",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
